[metadata]
name = airflow-provider-braze
version = attr: braze_provider.__version__
description = A Braze provider for Apache Airflow.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.9
packages = find:
install_requires =
    apache-airflow>=2.9.0,<3.0.0
    apache-airflow-providers-http>=4.0.0

[options.entry_points]
apache_airflow_provider =
    provider_info = braze_provider.__init__:get_provider_info
